<resources>
    <string name="app_name">College Football Coach: Career Edition</string>
    <string name="version">Version 1.5 BETA</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_team_strategy">Set Team Strategy</string>
    <string name="action_team_lineup">Set Team Lineup</string>
    <string name="action_league_history">League History/Records</string>
    <string name="action_league_records">League Records</string>
    <string name="action_top_25_history">Poll History</string>
    <string name="action_current_team_history">Team History</string>
    <string name="action_team_history">Coach History</string>
    <string name="action_rankings">Team Rankings</string>
    <string name="action_player_rankings">Player Rankings</string>
    <string name="action_heisman">Post-Season Awards</string>
    <string name="action_import">Import Data</string>
    <string name="action_news_stories">News Stories</string>
    <string name="action_bowlgame_watch">Bowl Games</string>
    <string name="action_ccg_watch">Conf Championships</string>
    <string name="action_ccg_bowl_watch">Post-Season Watch</string>
    <string name="action_save_league">Save League</string>
    <string name="action_return_main_menu">Return to Main Menu</string>
    <string name="action_change_team_name">Settings/Editor</string>
    <string name="title_activity_recruiting">RecruitingActivity</string>
    <string name="tutBasics">
        In College Football Coach, you take the role of a newly hired coach at your college of choice.
        As coach, it will be your responsibility to manage your team\'s strategy, simulate through seasons, recruit new players, and above all, win championships.\n\n

        DYNASTY MODE: Dynasty mode allows you to start with any team and build it into the best football dynasty you can. You will not get fired, however, other colleges may see changes in their staff.
        Every other feature is unlocked except user contracts. You can also switch universities via the Editor menu. \n\n
        CAREER MODE: Career mode puts you in the shoes of a new head coach trying to build your way up to stardom. If you perform well, your coaching attributes increase, your talent pool increases,
        and you will be offered contract extensions. If you perform poorly, you will lose coaching attributes, and potentially risk losing your job and be on the streets applying for a new position.\n
        This Mode has two starting points: NORMAL mode, which lets you start at any university, and CHALLENGE mode, which humbly starts you at a smaller school and makes your work to get to the top.
        \n\n

        Developer Notes:\n\n
        The original version of this game was created by Achi Jones in 2016. He graciously made this game open-source on Github and allowed it to be tinkered with. In Fall of 2017, I took
        the source code and expanded upon it for Android devices. The game now features several new features including expanded universe, improved realism, career mode, and in-game editor.
    </string>
    <string name="tutPlayingSeason">
        Your team will play 12 games in the regular season, which consist of playing all 9 of your conference opponents once and three out of conference games.
        By navigating to the GAMES tab, you can see exactly what your team\'s schedule is.
        And by clicking on each game, you can see a scouting report of the two teams (if the game has yet to be played), or a summary of the game (if it was already played).\n\n
        The most important game of the regular season is your rivalry game, which you gain prestige if won or lose prestige if lost.
        At the end of the regular season, the Conference Championship is played between the two teams with the best in-conference record.
        If two teams have the same record, a head-to-head tiebreaker is used. If three or more teams have the same record, the one with the highest poll ranking is chosen.
        After the Conference Championships, Bowl Games are played.\n\n
        The top 32 teams get chosen for a bowl, with the most important being the National Semifinals between the #1 and #4 team, and the #2 and #3 team.
        The winner of these two games advance to the National Championship where an undisputed champion is crowned.\n\n
        After the season, your team will have gained or lost prestige based on their results versus their expectations, and you move onto recruiting.
    </string>
    <string name="tutRankings">
        As your team plays through the season, it will be evaluated by pollsters who determine how good (or bad) your team is compared to others.
        This "Poll Ranking" is determined by wins, margin of victory, strength of schedule, and more, and has a big impact on how your season will play out,
        as it determines who gets into a bowl game and the semifinals.\n\nMany statistics are kept track of during the season, such as Yards Per Game, Opposing Points Per Game,
        Pass Yards Per Game, Turnover Differential and more. You can view all these statistics, as well as your team\'s ranking in each one, by navigating to the "STATS" tab.
    </string>
    <string name="tutRoster">
        When you first inherit a team, you will have a total of 46 players (22 starters) on your roster. Each player has a name, their year in school (from Freshman to Senior),
        an Overall rating, Potential rating, and three position specific ratings. The Overall rating is just a composite rating of the three position specific ones, while Potential
        determines how much each play improves during the offseason. You can view all of these players in the "ROSTER" tab.\n
        \n
        QB (1 starter):\n
        - Quarterback, leader on offense, responsible for throwing passes to Wide Receivers\n
        - Pass Strength: how far the QB can throw. Higher strength means catches go for more yards.\n
        - Accuracy: how accurate the QB is. Higher accuracy means a greater chance that the throw will be caught, as well as a lower interception chance.\n
        - Evasion: how evasive the QB is. Higher evasion means less sacks.
        - Speed: mobile quarterbacks are capable of scrambling out of plays and rushing in option offenses.\n
        \n
        RB (2 starters):\n
        - Running Back, responsible for carrying the ball up and down the field.\n
        - Rush Power: how strong the RB is. Higher power means he is less likely to be stopped at the line of scrimmage.\n
        - Rush Speed: how quick the RB is. Higher speed means runs go for more yards.\n
        - Evasion: how agile the RB is. Higher evasion means a higher chance of breaking free for bigger runs.\n
        - Catching: how good RB is at catching the ball. Used on screen-passes. \n
        \n
        WR (3 starters):\n
        - Wide Receiver, responsible for catching passes from the QB downfield.\n
        - Catching: how good the WR is at catching the ball. Higher catching means higher chance of completion and less drops.\n
        - Speed: how quick the WR is. Higher speed means his catches go for more yards.\n
        - Evasion: how agile and crafty the WR is. Higher evasion means higher chance to break free for big gains and long touchdowns.\n
        - Jumping: how high/quick a WR can jump to make a play on the ball. \n
        \n
        TE (1 starter):\n
        - Tight End, responsible for blocking during the running plays and a 4th option for receiving\n
        - Catching: how good the TE is at catching the ball. Higher catching means higher chance of completion and less drops.\n
        - Speed: how quick the TE is. Higher speed means his catches go for more yards.\n
        - Run Block: how good the TE is at blocking for rushing plays.\n
        \n
        OL (5 starters):\n
        - Offensive Linemen, responsible for protecting the QB and blocking for the RBs when they run.\n
        - Strength: most important rating, how strong the OL is.\n
        - Run Block: how good the OL is at blocking for rushing plays.\n
        - Pass Block: how good the OL is at blocking for pass plays.\n
        - Awareness: awareness of surroundings affects how well the OL cooperate together. \n
        \n
        K (1 starter):\n
        - Kicker, responsible for kicking extra points and field goals.\n
        - Kick Strength: how strong the kicker\'s leg is. Higher strength means longer field goals.\n
        - Kick Accuracy: how accurate the kicker is, higher means kicks are more likely to be good.\n
        - Clumsiness: how clumsy the kicker is, higher means more chance of success at onside kicks.\n
        - Pressure: how well the kicker handles pressure under situations such as 2 min warning and OT. \n
        DL (4 starters):\n
        - Defensive Linemen, responsible for putting pressure on the opposing QB and tackling RBs.\n
        - Strength: most important rating, how strong the DL is against opposing OLs.\n
        - Run Stop: how good the DL is at tackling opposing RBs without allowing many yards.\n
        - Pass Pressure: how much pressure they put on the opposing QB, higher pressure means the QB will have a harder time throwing accurate passes.\n
        - Tackling: how good the DL is at tackling RBs and QBs for sacks. \n
        \n
        LB (3 starters):\n
        - Linebacker, a leader on defense, responsible for putting pressure on the opposing QB, tackling RBs, and covering TEs.\n
        - Coverage: how good the LB is at covering receivers. Higher means less likely that the TE will complete the catch.\n
        - Run Stop: how good the LB is at tackling opposing RBs without allowing many yards.\n
        - Speed: how quick the LB is, affects how he can keep up with TEs.\n
        \n
        CB (3 starters):\n
        - Cornerback, responsible for covering a corresponding WR.\n
        - Coverage: how good the cornerback is at covering receivers. Higher means less likely that the WR will complete the catch.\n
        - Speed: how quick the CB is, affects how he can keep up with WRs.\n
        - Tackling: how good the CB is at tackling, higher means he is more likely to tackle WRs before they get away.\n
        - Jumping: how high and quick the CB can jump and attack the ball against the WR. \n
        \n
        S (1 starter):\n
        - Safety, a leader on defense, and responsible for covering the pass and causing inteceptions from opposing QBs.\n
        - Coverage: how good the safety is at convering the pass and how good he is at catching interceptions.\n
        - Speed: how quick the safety is, affects how he can keep up with WRs.\n
        - Tackling: how good the safety is at tackling, higher means he is more likely to tackle WRs before they get away.\n
        - Run Stop: how well the safety reads running plays and closes down on the RB.\n
        \n
    </string>
</resources>