<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="antdroid.cfbcoach.MainActivity">
    <item
        android:id="@+id/action_change_team_name"
        android:orderInCategory="100"
        android:title="@string/action_change_team_name" />
    <item
        android:id="@+id/action_league_history"
        android:orderInCategory="100"
        android:title="@string/action_league_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_top_25_history"
        android:orderInCategory="100"
        android:title="@string/action_top_25_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_current_team_history"
        android:orderInCategory="100"
        android:title="@string/action_current_team_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_team_history"
        android:orderInCategory="100"
        android:title="@string/action_team_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rankings"
        android:orderInCategory="100"
        android:title="@string/action_rankings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_player_rankings"
        android:orderInCategory="100"
        android:title="@string/action_player_rankings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_ccg_bowl_watch"
        android:orderInCategory="100"
        android:title="@string/action_ccg_bowl_watch"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_heisman"
        android:orderInCategory="100"
        android:title="@string/action_heisman"
        app:showAsAction="never" />
    <!-- <item
        android:id="@+id/action_import"
        android:orderInCategory="100"
        android:title="@string/action_import"
        app:showAsAction="never" /> -->
    <item
        android:id="@+id/action_save_league"
        android:orderInCategory="100"
        android:title="@string/action_save_league"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export_league"
        android:orderInCategory="100"
        android:title="@string/action_export_league"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_return_main_menu"
        android:orderInCategory="100"
        android:title="@string/action_return_main_menu"
        app:showAsAction="never" />
</menu>